crates/shiplog-engine/tests/render_json/snapshots/render_json__format_stability__coverage_manifest_full.snap
---
source: crates/shiplog-engine/tests/render_json/format_stability.rs
expression: text
---
{
  "run_id": "stability_test_run",
  "generated_at": "2025-06-01T12:00:00Z",
  "user": "octocat",
  "window": {
    "since": "2025-01-01",
    "until": "2025-04-01"
  },
  "mode": "merged",
  "sources": [
    "github",
    "manual"
  ],
  "slices": [
    {
      "window": {
        "since": "2025-01-01",
        "until": "2025-02-01"
      },
      "query": "author:octocat is:merged merged:2025-01-01..2025-02-01",
      "total_count": 15,
      "fetched": 15,
      "incomplete_results": false,
      "notes": []
    },
    {
      "window": {
        "since": "2025-02-01",
        "until": "2025-03-01"
      },
      "query": "author:octocat is:merged merged:2025-02-01..2025-03-01",
      "total_count": 100,
      "fetched": 30,
      "incomplete_results": true,
      "notes": [
        "GitHub search API limit reached",
        "Results may be incomplete"
      ]
    }
  ],
  "warnings": [
    "Incomplete results for February slice"
  ],
  "completeness": "Partial"
}
