crates/shiplog-engine/tests/render_json/snapshots/render_json__format_stability__jsonl_pr_event.snap
---
source: crates/shiplog-engine/tests/render_json/format_stability.rs
expression: text
---
{"id":"5fe344ad0cf9acbffb4bc45a718ad98b4138abd47bb97882294b7a6d74e78db5","kind":"PullRequest","occurred_at":"2025-06-01T12:00:00Z","actor":{"login":"octocat","id":1},"repo":{"full_name":"acme/widgets","html_url":"https://github.com/acme/widgets","visibility":"Public"},"payload":{"type":"PullRequest","data":{"number":42,"title":"Add feature X","state":"Merged","created_at":"2025-06-01T12:00:00Z","merged_at":"2025-06-01T12:00:00Z","additions":100,"deletions":20,"changed_files":5,"touched_paths_hint":["src/lib.rs","tests/integration.rs"],"window":{"since":"2025-01-01","until":"2025-04-01"}}},"tags":["feature"],"links":[{"label":"pr","url":"https://github.com/acme/widgets/pull/42"}],"source":{"system":"github","url":"https://api.github.com/repos/acme/widgets/pulls/42","opaque_id":"PR_abc123"}}
